<resources>
    <string name="app_name">adoptier</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot Password</string>
    <string name="tryRemember">Coba diingat lagi</string>
    <string name="remember">Remember Me</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="loginSuccess">Login Sukses</string>
    <string name="Success">Sukses</string>
    <string name="loginInvalidEmail">Email Salah</string>
    <string name="loginInvalidPass">Password Salah</string>
    <string name="loginInvalidCreds">Email dan Password Salah</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="passwordRe">Retype Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="back">Kembali</string>
</resources>